--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -8,7 +8,4 @@
     About Us
   {{/link-to}}
 </div>
-
-{{#each model as |rentalUnit|}}
-  {{rental-listing rental=rentalUnit}}
-{{/each}}
+{{outlet}}
