--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -10,7 +10,7 @@
     <span>Owner:</span> {{rental.owner}}
   </div>
   <div class="detail type">
-    <span>Type:</span> {{rental.type}}
+    <span>Type:</span> {{rentalPropertyType rental.type}} - {{rental.type}}
   </div>
   <div class="detail location">
     <span>Location:</span> {{rental.city}}
@@ -18,6 +18,7 @@
   <div class="detail bedrooms">
     <span>Number of bedrooms:</span> {{rental.bedrooms}}
   </div>
+  {{location-map location=rental.city}}
 </article>
 
 {{yield}}
